elk-test/k8s/filebeat.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat-daemonset
  namespace: kube-logging
  labels:
    k8s-app: filebeat
spec:
  selector:
    matchLabels:
      k8s-app: filebeat
  template:
    metadata:
      labels:
        k8s-app: filebeat
    spec:
      serviceAccountName: filebeat-service-account
      terminationGracePeriodSeconds: 30
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:8.14.3
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 100Mi
        args:
        - "-c"
        - "/etc/config/filebeat.yml"
        - "-e"
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: config
          mountPath: "/etc/config/"
        - name: data
          mountPath: /usr/share/filebeat/data
        - name: varlog
          mountPath: "/var/log/test/"
          readOnly: true
      volumes:
      - name: config
        configMap:
          defaultMode: 0600
          name: filebeat-config
      - name: varlog
        hostPath: 
          path: "/var/log/test/"
      - name: data
        hostPath:
          path: "/data/filebeat-data"
          type: DirectoryOrCreate
      # tolerations:
      # - effect: NoSchedule
      #   operator: Exists
