elk-test/k8s/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-service
  namespace: kube-logging
  labels:
    k8s-app: elasticsearch
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: db
  selector:
    k8s-app: elasticsearch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-statefulset
  namespace: kube-logging
  labels:
    k8s-app: elasticsearch
spec:
  serviceName: es-service
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch
  template:
    metadata:
      labels:
        k8s-app: elasticsearch
    spec:
      serviceAccountName: es-service-account
      nodeSelector:
        es: data
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:8.14.3
        name: elasticsearch
        ports:
        - containerPort: 9200
          name: db
        - containerPort: 9300
          name: transport
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: es-volume
          mountPath: /usr/share/elasticsearch/data/
      volumes:
      - name: es-volume
        hostPath:
          path: /data/es
