elk-test/k8s/logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
  namespace: kube-logging
spec:
  clusterIP: None
  ports:
  - port: 5044
    protocol: TCP
    targetPort: db
  selector:
    k8s-app: logstash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deploy
  namespace: kube-logging
spec:
  selector:
    matchLabels:
      k8s-app: logstash
  template:
    metadata:
      labels:
        k8s-app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:8.14.3
        ports:
        - containerPort: 5044
          name: beats
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        command:
        - "logstash"
        - "-f"
        - '/etc/logstash_c/logstash.conf'
        volumeMounts:
        - name: config-volume
          mountPath: "/etc/logstash_c/"
        - name: config-yml-volume
          mountPath: "/usr/share/logstash/config/"
      volumes:
      - name: config-volume
        configMap:
          name: logstash-config
          items:
          - key: logstash.conf
            path: logstash.conf
      - name: config-yml-volume
        configMap:
          name: logstash-config
          items:
          - key: logstash.yml
            path: logstash.yml
